# jCalc

./: CMakeLists.txt
jCalc_tests/: catch.h
jCalc_tests/tests/: CMakeLists.txt  CalculationResultTests.cpp  ErrorManagerTest.cpp  RunAllTests.cpp  SurdFracTest.cpp
src/: InputDefs.h  OperationMode.h
src/ErrorMgt/: Error.h
src/GUI/: GraphicsController.cpp  GraphicsController.h  GraphicsStream.cpp  GraphicsStream.h  MenuStrings.h  tigr.c  tigr.h
src/core/: CalculationResult.cpp  CalculationResult.h  Calculator.cpp  Calculator.h  Evaluator.cpp  Evaluator.h  FunctionStream.cpp  FunctionStream.h  MathFunc.cpp  MathFunc.h  MemoryMgr.cpp  MemoryMgr.h  PiFrac.h  ResultValue.h  SurdFrac.cpp  SurdFrac.h  main.cpp
src/errorMgt/: Error.cpp  Error.h  ErrorManager.cpp  ErrorManager.h
src/init/: Initialiser.cpp  Initialiser.h  MbedInit.cpp  MbedInit.h  TermInit.cpp  TermInit.h
src/input/: Button.h  InputParser.cpp  InputParser.h  MenuPage.cpp  MenuPage.h  UserInputController.cpp  UserInputController.h
src/input/buttonMaps/: BaseN.h  Maths.h  Menu.h
